--- a/css/agency.css
+++ b/css/agency.css
@@ -70,7 +70,7 @@ h6 {
 .open .dropdown-toggle.btn-primary {
   color: white;
   background-color: #cf1919;
-  border-color: #f6bf01;
+  border-color: #cf1919;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -117,7 +117,7 @@ fieldset[disabled] .btn-primary.active {
 .open .dropdown-toggle.btn-xl {
   color: white;
   background-color: #cf1919;
-  border-color: #f6bf01;
+  border-color: #cf1919;
 }
 .btn-xl:active,
 .btn-xl.active,
